--- a/ycaidao/package.json
+++ b/ycaidao/package.json
@@ -8,6 +8,10 @@
     "grunt-contrib-cssmin": "^0.14.0",
     "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-uglify": "^0.11.1",
-    "grunt-contrib-watch": "^0.6.1"
-  }
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-sass": "0.4.0"
+  },
+  "description":"",
+  "license":"",
+  "repository":""
 }
